# linkly

./: .dockerignore  Dockerfile  README.md  fly.toml
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  fly.toml
server/migrations/: 0001_initial.sql  0002_bio_pages.sql  0003_bio_link_clicks.sql  0004_bio_page_views.sql  0005_users_and_ownership.sql  0006_force_password_change.sql
server/src/: auth.rs  cache.rs  config.rs  db.rs  db_bio.rs  db_users.rs  geo.rs  main.rs  models.rs  password.rs  s3.rs
server/src/handlers/: admin.rs  bio.rs  mod.rs  redirect.rs  users.rs
server/templates/: analytics.html  base.html  bio_analytics.html  bio_form.html  bio_list.html  bio_page.html  bio_social_icon.html  change_password.html  dashboard.html  edit_user.html  login.html  profile.html  register.html  short_links.html  users.html
